# linkcheck2

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs
src/scanners/: markdown.rs  plaintext.rs
src/validation/: context.rs  filesystem.rs  web.rs
