[package]
name = "linkcheck"
version = "0.4.1"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/Michael-F-Bryan/linkcheck"
readme = "README.md"
description = "A library for extracting and validating links."
keywords = ["linkchecker", "linkcheck", "links", "check"]
categories = ["text-processing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
codespan = "0.11.0"
linkify = "0.10.0"
pulldown-cmark = "0.12"
reqwest = "0.12.5"
futures = "0.3.4"
log = "0.4.8"
thiserror = "1.0.15"
http = "1.1"
bytes = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
url = "2"
dunce = "1.0.0"

[dev-dependencies]
tempfile = "3.1.0"
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.5"

[features]
default = ["serde-1"]
serde-1 = ["serde", "url/serde", "codespan/serialization"]
