[package]
name = "linkcheck2"
version = "0.5.0"
authors = [
    "Michael-F-Bryan <michaelfbryan@gmail.com>",
    "Martin Liška <martin.liska@hey.com>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/Michael-F-Bryan/linkcheck"
readme = "README.md"
description = "A library for extracting and validating links."
keywords = ["linkchecker", "linkcheck", "links", "check"]
categories = ["text-processing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
codespan = "0.11.1"
linkify = "0.10.0"
pulldown-cmark = "0.12"
reqwest = "0.12.8"
futures = "0.3.31"
log = "0.4.22"
thiserror = "1.0.64"
http = "1.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
url = "2"
dunce = "1.0.5"

[dev-dependencies]
tempfile = "3.13.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.5"

[features]
default = ["serde-1"]
serde-1 = ["serde", "url/serde", "codespan/serialization"]
