[package]
name = "linkcheck2"
version = "0.5.0"
authors = [
    "Michael-F-Bryan <michaelfbryan@gmail.com>",
    "Martin Liška <martin.liska@hey.com>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/marxin/linkcheck2"
readme = "README.md"
description = "A library for extracting and validating links."
keywords = ["linkchecker", "linkcheck", "links", "check"]
categories = ["text-processing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
codespan = "0.11.1"
linkify = "0.10.0"
pulldown-cmark = "0.12.2"
reqwest = "0.12.11"
futures = "0.3.31"
log = "0.4.22"
thiserror = "2.0.9"
http = "1.2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
url = "2"
dunce = "1.0.5"

[dev-dependencies]
tempfile = "3.14.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.6"

[features]
default = ["serde-1"]
serde-1 = ["serde", "url/serde", "codespan/serialization"]
